# Classification_with_decision_tree

./: .gitignore  CMakeLists.txt  Classification_with_decision_tree.sln  Classification_with_decision_tree.vcxproj  Dataset.c  Dataset.h  DecisionTree.c  DecisionTree.h  FASHIONtree.txt  LICENSE  MNISTtree.txt  PENDIGITStree.txt  README.md  RandomForest.c  RandomForest.h  RandomForest.txt  RandomForestFASHION.txt  RandomForestMNIST.txt  RandomForestPENDIGITS.txt  Sauvegarde.c  Sauvegarde.h  Split.c  Split.h  a.out  main.c  rapport_profiling.txt
Datasets/: DATASET_A_MOI.txt  PENDIGITS_test.txt  PENDIGITS_train.txt
